style: fix x-overflow being shown

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   }
 
   main {
-    @apply min-h-screen relative bg-primary;
+    @apply min-h-screen relative bg-primary overflow-hidden;
   }
 
   header {
